corrected responsive hero image on small / medium

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,11 +1,20 @@
 .footer {
-  padding: 25px;
   text-align: center;
   background-color: #1f2937;
   color: white;
   margin-top: auto;
   width: 100%;
 }
+
+/* .copybar {
+  text-align: center;
+  background-color: white;
+  color: red;
+  font-weight: 600;
+
+  margin-top: auto;
+  width: 100%;
+} */
 
 .footer p {
   margin: 5px 0;
